# thinkbox-krakatoa

./: .clang-format  .gitignore  CONTRIBUTING.md  NOTICE.txt  README.md
Krakatoa/: CMakeLists.txt  build.py  conanfile.py  stdafx.cpp  stdafx.h
Krakatoa/krakatoa/: atmosphere_impl.hpp  atmosphere_interface.hpp  birth_channel_gen.hpp  camera_manager.hpp  channel_render_element.hpp  collection_interface.hpp  diffuse_render_element.hpp  emission_render_element.hpp  geometry_renderer.hpp  light_object.hpp  light_render_element.hpp  lighting_data.hpp  magma_render_element.hpp  matte_zdepth_render_element.hpp  mblur_data.hpp  min_color6f.hpp  normal_render_element.hpp  occluded_layer_render_element.hpp  openvdb_overloads.hpp  particle_render_element_interface.hpp  particle_repopulation.hpp  particle_volume.hpp  prt_maker.hpp  prt_stream_builder.hpp  render_element.hpp  render_element_impl.hpp  render_element_interface.hpp  renderer.hpp  scene_context.hpp  shader_functions.hpp  shader_render_element.hpp  shaders.hpp  shared_object.hpp  specular_render_element.hpp  sticky_channel_particle_istream.hpp  tangent_render_element.hpp  threading_functions.hpp  triangle_rasterizer.hpp  velocity_render_element.hpp  watermark.hpp  (+1 more)
Krakatoa/krakatoa/fumefx/: fumefx_ext_interface.hpp
Krakatoa/krakatoa/raytrace_renderer/: openvdb_renderer.hpp  raytrace_renderer.hpp
Krakatoa/krakatoa/splat_renderer/: default_light_traits.hpp  filter2f.hpp  omni_light_traits.hpp  parallel_progress.hpp  splat_lighting.hpp  splat_renderer.hpp
Krakatoa/krakatoa/voxel_renderer/: data_source.hpp  default_filter2f.hpp  default_filter3f.hpp  default_radial_filter3f.hpp  filter2f.hpp  filter3f.hpp  image_wrapper.hpp  particle_data_source.hpp  sample.hpp  slice_container.hpp  slice_container_impl.hpp  slice_coordsys.hpp  slice_coordsys_impl.hpp  voxel_renderer.hpp
Krakatoa/src/: birth_channel_gen.cpp  camera_manager.cpp  channel_render_element.cpp  diffuse_render_element.cpp  emission_render_element.cpp  geometry_renderer.cpp  light_object.cpp  light_render_element.cpp  magma_render_element.cpp  matte_zdepth_render_element.cpp  normal_render_element.cpp  occluded_layer_render_element.cpp  particle_repopulation.cpp  particle_volume.cpp  prt_stream_builder.cpp  renderer.cpp  shader_functions.cpp  shader_render_element .cpp  shared_object.cpp  specular_render_element.cpp  sticky_channel_particle_istream.cpp  tangent_render_element.cpp  threading_functions.cpp  velocity_render_element.cpp  watermark.cpp  zdepth_render_element.cpp
Krakatoa/src/raytrace_renderer/: openvdb_renderer.cpp  raytrace_renderer.cpp
Krakatoa/src/splat_renderer/: filter2f.cpp  splat_cube_renderer.cpp  splat_lighting.cpp  splat_renderer.cpp
Krakatoa/src/voxel_renderer/: default_filter2f.cpp  default_filter3f.cpp  default_radial_filter3f.cpp  particle_data_source.cpp  slice_container_impl.cpp  slice_coordsys_impl.cpp  voxel_renderer.cpp
KrakatoaSR/: CMakeLists.txt  KrakatoaSR.exp  KrakatoaSR.map  build.py  conanfile.py  stdafx.cpp  stdafx.h
KrakatoaSR/Example/: CMakeLists.txt  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp  example16.cpp  example17.cpp  example18.cpp  example19.cpp
KrakatoaSR/include/: krakatoasr_datatypes.hpp  krakatoasr_light.hpp  krakatoasr_mesh.hpp  krakatoasr_particles.hpp  krakatoasr_progress.hpp  krakatoasr_render_saving.hpp  krakatoasr_renderer.hpp  krakatoasr_shader.hpp  krakatoasr_transformation.hpp  mainpage.dox
KrakatoaSR/include/doxygen/: Doxyfile  documentation.html
KrakatoaSR/include/krakatoasr_renderer/: image_writer.hpp  params.hpp  progress_logger.hpp  renderer.hpp
KrakatoaSR/src/: cstandardout.cpp  dllmain.cpp  krakatoasr_light.cpp  krakatoasr_mesh.cpp  krakatoasr_particles.cpp  krakatoasr_progress.cpp  krakatoasr_render_saving.cpp  krakatoasr_renderer.cpp  krakatoasr_shader.cpp  krakatoasr_transformation.cpp
KrakatoaSR/src/krakatoasr_renderer/: image_writer.cpp  params.cpp  renderer.cpp
